# achordion

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  TODO.md  VERSIONING.md  openocd.gdb
.cargo/: config
.github/workflows/: action.yml  eurorack.yml  lib.yml  rust.yml
bank/: Cargo.toml
bank/src/: bandlimit.rs  factor.rs  filter.rs  lib.rs
bank/src/filter/: fft.rs  mod.rs  svf.rs
bank/src/waveform/: harsh.rs  sins.rs  soft.rs  vocal.rs
eurorack/: Cargo.toml  memory.x  openocd.gdb
eurorack/hardware/: .gitignore  Achordion.kicad_pcb  Achordion.sch
eurorack/hardware/achordion/: Achordion-cache.lib  Achordion.kicad_pcb  Achordion.pro  Achordion.sch
eurorack/hardware/core/: core-cache.lib  core.kicad_pcb  core.kicad_pcb-bak  core.net  core.pro  core.sch  core.sch-bak  fp-info-cache
eurorack/hardware/core/jlcpdb/: core-bom  core-bom.csv  core-bom.xml  core-footprint-positions.csv
eurorack/hardware/core_power/: core_power-cache.lib  core_power.kicad_pcb  core_power.sch
eurorack/hardware/monolith_deprecated/: Achordion-cache.lib  Achordion.kicad_pcb  Achordion.pro  Achordion.sch
eurorack/hardware/monolith_deprecated/assembly/: ACHORDION_REV1_FOOTPRINT_POSITIONS.csv
eurorack/src/: bank.rs  controls.rs  cs43l22.rs  display.rs  input_activity.rs  interface.rs  led.rs  main.rs  midi.rs  profiling.rs  storage.rs  system.rs
eurorack/src/bank/: harsh.rs  mod.rs  perfect.rs  sins.rs  soft.rs  vocal.rs
eurorack/src/bsp/: board.rs  mod.rs  pins.rs
eurorack/src/hal/: dac.rs  dma.rs  exti.rs  flash.rs  gpio.rs  mod.rs  rcc.rs  stream.rs  syscfg.rs  timer.rs
eurorack/src/system/: audio.rs  button.rs  control_buffer.rs  cv.rs  debounce_buffer.rs  flash.rs  hal.rs  led_user.rs  mod.rs  pot.rs
eurorack/src/system/peripherals/: button.rs  led.rs  mod.rs  probe.rs
hack/: calculate_reference_voltage_current_limiter.py  generate_amplitude_weighting.py  generate_wavetables.py  plot.py  plot_assembly.py  plot_gerber.py  plot_pcb.py  plot_schematic.sh  release.sh  release.tmpl  release.tmpl.md  update_website.sh
hardware/: .gitignore  Achordion-bom.csv  Achordion-cache.lib  Achordion.kicad_pcb  Achordion.kicad_pro  Achordion.kicad_sch  Achordion.pro  Achordion.sch  DaisySeed.dcm  DaisySeed.lib  Daisy_Patch_SM.lib  calculate_adc_opamp.py  calculate_adc_opamp_components.py  dac.circuitjs.txt  fp-lib-table  simulation.circuitjs.txt  sym-lib-table
hardware/BetterFootprints.pretty/: DaisySM_4_Connfly.kicad_mod  DaisySM_Connfly.kicad_mod  Potentiometer_Alpha.kicad_mod  Potentiometer_Slider_SongHuei.kicad_mod  Potentiometer_Trimmer_SongHuei.kicad_mod  Power_Connector_Connfly.kicad_mod  Thonkiconn.kicad_mod
hardware/Custom.pretty/: Daisy_Patch_SM.kicad_mod  Tooling_Hole.kicad_mod
hardware/Device_Audio_Electrosmith_Daisy_Seed.pretty/: Device_Audio_Electrosmith_Daisy_Seed.kicad_mod
hardware/Graphics.pretty/: Graphics_Back.kicad_mod  Graphics_Front.kicad_mod
hardware/Panelization.pretty/: mouse-bite-2mm-slot.kicad_mod
hardware/jlcpcb/: project.db
lib/: Cargo.toml
lib/benches/: bench.rs
lib/src/: config.rs  detune.rs  display.rs  instrument.rs  instument.rs  interpolation.rs  lib.rs  midi.rs  note.rs  oscillator.rs  overdrive.rs  probe.rs  store.rs  taper.rs  tone.rs  wavetable.rs
lib/src/bank/: mod.rs
lib/src/chords/: diatonic.rs  ionian.rs  mod.rs
lib/src/midi/: channel.rs  control.rs  controller.rs  instrument.rs  message.rs  mod.rs  note.rs  parser.rs  usbd_midi.rs  velocity.rs
lib/src/quantizer/: chromatic.rs  diatonic.rs  ionian.rs  mod.rs
lib/src/scales/: diatonic.rs  mod.rs
lib/src/waveform/: akwf.rs  brass.rs  harsh.rs  mod.rs  perfect.rs  pulse.rs  saw.rs  sinc.rs  sine.rs  sins.rs  soft.rs  square.rs  triangle.rs  vocal.rs
lib/src/wavetable/: mod.rs  saw.rs  sine.rs
lib/src/weighting/: calculation.rs  mod.rs  table.rs
manual/: .gitignore  Makefile  manual.tex
manual/user/: manual.tex
puredata/: Cargo.toml  README.md  achordion.pd
puredata/src/: cstr.rs  lib.rs  log.rs  wrapper.rs
puredata/src/bank/: harsh.rs  mod.rs  perfect.rs  sins.rs  soft.rs  vocal.rs
src/: main.rs
