[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "achordion"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Work in progress"
repository = "https://github.com/zlosynth/achordion"
readme = "README.md"
publish = false

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.6"
cortex-m-semihosting = "0.3"
panic-halt = "0.2.0"
usb-device = "0.2.4"
usbd-serial = "0.1"
usbd-midi = { git = "https://github.com/btrepp/usbd-midi", branch = "master" }

[dependencies.stm32f3xx-hal]
version = "0.6.1"
features = ["stm32f303xc", "stm32-usbd", "rt"]

[[bin]]
name = "achordion"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
