[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "achordion-lib"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Work in progress"
repository = "https://github.com/zlosynth/achordion"
readme = "../README.md"
publish = false
build = "build/main.rs"

[dependencies]
heapless = "0.6"
micromath = "1.1"

[build-dependencies.sirena]
git = "https://github.com/zlosynth/sirena"
rev = "52ebc6c0e82804a3aced22d04effb04af6cd2646"
default-features = false

[dev-dependencies]
approx = "0.4"
criterion = "0.3"
lazy_static = { version = "1.4", features = [ "spin_no_std" ] }

[[bench]]
name = "bench"
harness = false
