[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "achordion-lib"
version = "0.14.0" # hack/release.sh
license = "GPL-3.0-or-later"
description = "Chord-crafting quantizing wavetable oscillator."
repository = "https://github.com/zlosynth/achordion"
readme = "../README.md"
publish = false

[dependencies]
heapless = "0.6"
micromath = "1.1"
crc = "2"
field-offset = "0.3"
lazy_static = { version = "1.4", features = [ "spin_no_std" ] }

[dev-dependencies]
approx = "0.4"
criterion = "0.3"
achordion-bank = { path = "../bank" }

[[bench]]
name = "bench"
harness = false
