[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "achordion-lib"
version = "1.2.0" # hack/release.sh
license = "GPL-3.0-or-later"
description = "Chord-crafting quantizing wavetable oscillator."
repository = "https://github.com/zlosynth/achordion"
readme = "../README.md"
publish = false

[features]
default = ["stable_amplitude"]
balanced_amplitude = []
stable_amplitude = []

[dependencies]
micromath = "1.1"
crc = "2"
field-offset = "0.3"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[dev-dependencies]
approx = "0.4"
criterion = "0.3"
achordion-bank = { path = "../bank", features = ["fft"] }

[[bench]]
name = "bench"
harness = false
