[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "achordion-pd"
version = "0.2.0" # hack/release.sh
license = "GPL-3.0-or-later"
description = "Pure Data external is meant for simple testing of the module without a need to flash it to the real thing"
repository = "https://github.com/zlosynth/achordion"
readme = "../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pd-sys = "0.1.0"
achordion-lib = { path = "../lib" }
field-offset = "0.3"
lazy_static = "1.4"
