[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "achordion-puredata"
version = "0.9.0" # hack/release.sh
license = "GPL-3.0-or-later"
description = "Chord-crafting quantizing wavetable oscillator external for Pure Data."
repository = "https://github.com/zlosynth/achordion"
readme = "../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pd-sys = "0.1.0"
achordion-lib = { path = "../lib" }
field-offset = "0.3"
lazy_static = "1.4"
